# portaudio-pp

./: .clang-format  CMakeLists.txt
examples/: CMakeLists.txt  sine.cpp
include/: portaudio.hpp
include/pa/: Error.hpp  Init.hpp  PortAudio.hpp  Stream.hpp
pa/: Error.hpp  Stream.hpp
